# libp2p-poc-base

./: .gitmodules  Makefile  README.md  package.json
.github/workflows/: test.yml
libp2p-back/swarm/src/: lib.rs
libp2p/transports/wasm-ext/src/: websockets.js
patches/: 1.diff
scripts/: apply-patches.sh  build-backend.sh  run-backend.sh  run-frontend.sh  run-tests.sh
src/views/: Home.vue
wasm-net/: Cargo.toml  README.md
wasm-net/src/: browser.rs  lib.rs  test.rs
